# MARC-GIT-E-12

./: CMakeLists.txt  README.md  functions.c  functions.h  main.c  map.c  map.h  moves.c  moves.h  node.c  node.h  rover.c  rover.h  stack.c  stack.h  test.c  tree.c  tree.h
maps/: big.map  test.map
